--- a/AGS/dashboard.html
+++ b/AGS/dashboard.html
@@ -74,9 +74,33 @@ new Chartist.Bar('#ct-chart', data);
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./sector1.html">
+            <a class="nav-link" href="#" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="material-icons">house</i>
               <p>Sector</p>
+            </a>
+			<div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownProfile">
+                  <a class="dropdown-item" href="./sector1.html">Sector1</a>
+                  <a class="dropdown-item" href="./sector2.html">Sector2</a>
+                  <a class="dropdown-item" href="./sector3.html">Sector3</a>
+				  <a class="dropdown-item" href="./sector4.html">Sector4</a>
+            </div>
+          </li>
+		  <li class="nav-item ">
+            <a class="nav-link" href="./report.html">
+              <i class="material-icons">file_copy</i>
+              <p>Report</p>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="./usersetting.html">
+              <i class="material-icons">settings_applications</i>
+              <p>User Setting</p>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="./login.html">
+              <i class="material-icons">directions_run</i>
+              <p>Logout</p>
             </a>
           </li>
           <!-- <li class="nav-item ">
@@ -169,7 +193,7 @@ new Chartist.Bar('#ct-chart', data);
                 <div class="card-footer">
                   <div class="stats">
                     <!-- <i class="material-icons text-danger">warning</i> -->
-                    <a href="#">View Detail...</a>
+                    <a href="./sector1.html">View Detail...</a>
                   </div>
 				  <div class="stats">
 				  <i class="material-icons">update</i> Just Updated
@@ -189,7 +213,7 @@ new Chartist.Bar('#ct-chart', data);
                 <div class="card-footer">
                   <div class="stats">
                     <!-- <i class="material-icons text-danger">warning</i> -->
-                    <a href="#">View Detail...</a>
+                    <a href="./sector2.html">View Detail...</a>
                   </div>
 				  <div class="stats">
 				  <i class="material-icons">update</i> Just Updated
@@ -209,7 +233,7 @@ new Chartist.Bar('#ct-chart', data);
                 <div class="card-footer">
                   <div class="stats">
                     <!-- <i class="material-icons text-danger">warning</i> -->
-                    <a href="#">View Detail...</a>
+                    <a href="./sector3.html">View Detail...</a>
                   </div>
 				  <div class="stats">
 				  <i class="material-icons">update</i> Just Updated
@@ -229,7 +253,7 @@ new Chartist.Bar('#ct-chart', data);
                 <div class="card-footer">
                   <div class="stats">
                     <!-- <i class="material-icons text-danger">warning</i> -->
-                    <a href="#">View Detail...</a>
+                    <a href="./sector4.html">View Detail...</a>
                   </div>
 				  <div class="stats">
 				  <i class="material-icons">update</i> Just Updated
@@ -550,9 +574,6 @@ new Chartist.Bar('#ct-chart', data);
 			
 			
 	  
-      <!-- <footer class="footer">
-
-      </footer> -->
     </div>
   </div>
  <!--  <div class="fixed-plugin">
