--- a/AGS/user.html
+++ b/AGS/user.html
@@ -62,9 +62,33 @@
             </a>
           </li>
 		  <li class="nav-item ">
-            <a class="nav-link" href="./sector1.html">
+            <a class="nav-link" href="#" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="material-icons">house</i>
               <p>Sector</p>
+            </a>
+			<div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownProfile">
+                  <a class="dropdown-item" href="./sector1.html">Sector1</a>
+                  <a class="dropdown-item" href="./sector2.html">Sector2</a>
+                  <a class="dropdown-item" href="./sector3.html">Sector3</a>
+				  <a class="dropdown-item" href="./sector4.html">Sector4</a>
+            </div>
+          </li>
+		  <li class="nav-item ">
+            <a class="nav-link" href="./report.html">
+              <i class="material-icons">file_copy</i>
+              <p>Report</p>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="./usersetting.html">
+              <i class="material-icons">settings_applications</i>
+              <p>User Setting</p>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="./login.html">
+              <i class="material-icons">directions_run</i>
+              <p>Logout</p>
             </a>
           </li>
           <!-- <li class="nav-item ">
@@ -308,21 +332,7 @@
                   Get the pro version
                 </a>
             </li> -->
-        <li class="button-container">
-          <a href="https://demos.creative-tim.com/material-dashboard/docs/2.1/getting-started/introduction.html" target="_blank" class="btn btn-default btn-block">
-            View Documentation
-          </a>
-        </li>
-        <li class="button-container github-star">
-          <a class="github-button" href="https://github.com/creativetimofficial/material-dashboard" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
-        </li>
-        <li class="header-title">Thank you for 95 shares!</li>
-        <li class="button-container text-center">
-          <button id="twitter" class="btn btn-round btn-twitter"><i class="fa fa-twitter"></i> &middot; 45</button>
-          <button id="facebook" class="btn btn-round btn-facebook"><i class="fa fa-facebook-f"></i> &middot; 50</button>
-          <br>
-          <br>
-        </li>
+
       </ul>
     </div>
   </div> -->
