--- a/AGS/sector1.html
+++ b/AGS/sector1.html
@@ -266,7 +266,7 @@ p.a {
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
           <div class="navbar-wrapper">
-            <a class="navbar-brand" href="#pablo">Sector</a>
+            <a class="navbar-brand" href="#pablo">Sector1</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
