--- a/AGS/sector4.html
+++ b/AGS/sector4.html
@@ -39,14 +39,14 @@
         [3,  25.4,   57, 25.7],
         [4,  11.7, 18.8, 10.5],
         [5,  11.9, 17.6, 10.4],
-        [6,   8.8, 13.6,  7.7],
+        [6,   98.8, 13.6,  97.7],
         [7,   7.6, 12.3,  9.6],
         [8,  12.3, 29.2, 10.6],
         [9,  16.9, 42.9, 14.8],
         [10, 12.8, 30.9, 11.6],
-        [11,  5.3,  7.9,  4.7],
+        [11,  5.3,  79.9,  4.7],
         [12,  6.6,  8.4,  5.2],
-        [13,  4.8,  6.3,  3.6],
+        [13,  49.8,  6.3,  3.6],
         [14,  4.2,  6.2,  3.4]
       ]);
 
@@ -285,10 +285,10 @@ p.a {
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                  <a class="dropdown-item" href="#">Profile</a>
-                  <!-- <a class="dropdown-item" href="#">Settings</a> -->
+                  <a class="dropdown-item" href="./user.html">Profile</a>
+                  <a class="dropdown-item" href="./usersetting.html">Settings</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Log out</a>
+                  <a class="dropdown-item" href="./login.html">Log out</a>
                 </div>
               </li>
             </ul>
@@ -594,37 +594,63 @@ p.a {
                     </div>
                     <div class="tab-pane" id="settings">
                       <table class="table">
+                        <thead class=" text-success">
+					  <tr><th>
+                          Component No.
+                        </th>
+                        <th>
+                          Device Health
+                        </th>
+                        <th>
+                          Device Action
+                        </th>           
+                      </tr>
+					  </thead>
                         <tbody>
                           <tr>
                             <td>
-                              7/10/19
+							  Temperature Sensors
                             </td>
-                            <td>The temperature is decrease back to normal level
-                            </td>
-                            <td class="td-actions text-right">
-                              <button type="button" rel="tooltip" title="Edit Log" class="btn btn-primary btn-link btn-sm">
-                                <i class="material-icons">edit</i>
-                              </button>
-                              <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">
-                                <i class="material-icons">close</i>
-                              </button>
-                            </td>
+                            <td>Good</td>
+							<td>On</td>						
                           </tr>
                           <tr>
                             <td>
-                              1/10/19
+							  Water Sensors
                             </td>
-                            <td>The humidity is increase back to normal level</td>
-                            <td class="td-actions text-right">
-                              <button type="button" rel="tooltip" title="Edit Log" class="btn btn-primary btn-link btn-sm">
-                                <i class="material-icons">edit</i>
-                              </button>
-                              <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">
-                                <i class="material-icons">close</i>
-                              </button>
-                            </td>
+                            <td>Good</td>
+							<td>On</td>						
                           </tr>
-                        </tbody>
+                          <tr>
+                            <td>
+							  Light(Lux)
+                            </td>
+                            <td>Good</td>
+							<td>On</td>						
+                          </tr>
+						  <tr>
+                            <td>
+							  Water Pump
+                            </td>
+                            <td>Good</td>
+							<td>Automated On</td>						
+                          </tr>
+						  <tr>
+                            <td>
+							  Water Sprinkler	
+                            </td>
+                            <td>Good</td>
+							<td>On</td>						
+                          </tr>
+						  <tr>
+                            <td>
+							  Artificial Light
+                            </td>
+                            <td>Unused</td>
+							<td>Off</td>						
+                          </tr>
+                          
+						  </tbody>
                       </table>
                     </div>
                     <div class="tab-pane" id="settings">
