--- a/AGS/usersetting.html
+++ b/AGS/usersetting.html
@@ -233,10 +233,10 @@ input:checked + .slider:before {
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                  <a class="dropdown-item" href="#">Profile</a>
-                  <!-- <a class="dropdown-item" href="#">Settings</a> -->
+                  <a class="dropdown-item" href="./user.html">Profile</a>
+                  <a class="dropdown-item" href="./usersetting.html">Settings</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Log out</a>
+                  <a class="dropdown-item" href="./login.html">Log out</a>
                 </div>
               </li>
             </ul>
