--- a/AGS/report.html
+++ b/AGS/report.html
@@ -54,7 +54,7 @@
         Tip 2: you can also add an image using data-image tag
     -->
       <div class="logo">
-        <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+        <a href="./dashboard.html" class="simple-text logo-normal">
           AGS
         </a>
       </div>
@@ -263,7 +263,7 @@
                             22/11/2019 23:45
                           </td>
                         </tr>
-                        <tr>
+                        <tr class='clickable-row' data-href='./report1.php'>
                           <td>
                             23/11/2019
                           </td>
@@ -280,7 +280,7 @@
                             23/11/2019 23:45
                           </td>
                         </tr>
-                        <tr>
+                        <tr class='clickable-row' data-href='./report1.php'>
                           <td>
                             24/11/2019
                           </td>
@@ -297,7 +297,7 @@
                             24/11/2019 21:55
                           </td>
                         </tr>
-                        <tr>
+                        <tr class='clickable-row' data-href='./report1.php'>
                           <td>
                             25/11/2019
                           </td>
@@ -314,7 +314,7 @@
                             25/11/2019 22:56
                           </td>
                         </tr>
-                        <tr>
+                        <tr class='clickable-row' data-href='./report1.php'>
                           <td>
                             26/11/2019
                           </td>
@@ -331,7 +331,7 @@
                             26/11/2019 23:11
                           </td>
                         </tr>
-                        <tr>
+                        <tr class='clickable-row' data-href='./report1.php'>
                           <td>
                             27/11/2019
                           </td>
@@ -348,7 +348,7 @@
                             27/11/2019 22:33
                           </td>
                         </tr>
-						<tr>
+						<tr class='clickable-row' data-href='./report1.php'>
                           <td>
                             28/11/2019
                           </td>
