--- a/AGS/user.html
+++ b/AGS/user.html
@@ -43,7 +43,7 @@
         Tip 2: you can also add an image using data-image tag
     -->
       <div class="logo">
-        <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+        <a href="./dashboard.html" class="simple-text logo-normal">
           AGS
         </a>
       </div>
