--- a/AGS/usersetting.html
+++ b/AGS/usersetting.html
@@ -116,7 +116,7 @@ input:checked + .slider:before {
         Tip 2: you can also add an image using data-image tag
     -->
       <div class="logo">
-        <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+        <a href="./dashboard.html" class="simple-text logo-normal">
           AGS
         </a>
       </div>
